--- a/master.css
+++ b/master.css
@@ -14,7 +14,7 @@ body{
 .canvas-container
 {
     margin: auto auto;
-    border: 1px solid #ccc
+    border: 1px solid #ccc;
 }
 
 #buttons
@@ -34,6 +34,21 @@ body{
     margin-left:-100px;
 }
 #value_input_text
+{
+    margin: auto auto;
+    width: 250px;
+}
+
+.uploader_wrapper
+{
+    display: none;
+    z-index: 100;
+    position: absolute;
+    top:300px;
+    left:50%;
+    margin-left:-100px;
+}
+.uploader_text
 {
     margin: auto auto;
     width: 250px;
